// This file is autogenerated by ./scripts/generate_protobuf/outfuncs.rb

syntax = "proto3";

package pg_query;

message ScanOutput {
  repeated ScanToken tokens = 1;
}

message ScanToken {
  int32 start = 1;
  int32 end = 2;
  Token token = 4;
  KeywordKind keyword_kind = 5;
}

enum KeywordKind {
  NO_KEYWORD = 0;
  UNRESERVED_KEYWORD = 1;
  COL_NAME_KEYWORD = 2;
  TYPE_FUNC_NAME_KEYWORD = 3;
  RESERVED_KEYWORD = 4;
}

enum Token {
  NUL = 0;
  // Single-character tokens that are returned 1:1 (identical with "self" list in scan.l)
  // Either supporting syntax, or single-character operators (some can be both)
  // Also see https://www.postgresql.org/docs/12/sql-syntax-lexical.html#SQL-SYNTAX-SPECIAL-CHARS
  ASCII_37 = 37; // "%"
  ASCII_40 = 40; // "("
  ASCII_41 = 41; // ")"
  ASCII_42 = 42; // "*"
  ASCII_43 = 43; // "+"
  ASCII_44 = 44; // ","
  ASCII_45 = 45; // "-"
  ASCII_46 = 46; // "."
  ASCII_47 = 47; // "/"
  ASCII_58 = 58; // ":"
  ASCII_59 = 59; // ";"
  ASCII_60 = 60; // "<"
  ASCII_61 = 61; // "="
  ASCII_62 = 62; // ">"
  ASCII_63 = 63; // "?"
  ASCII_91 = 91; // "["
  ASCII_93 = 93; // "]"
  ASCII_94 = 94; // "^"
  // Named tokens in scan.l
  IDENT = 258;
  UIDENT = 259;
  FCONST = 260;
  SCONST = 261;
  USCONST = 262;
  BCONST = 263;
  XCONST = 264;
  Op = 265;
  ICONST = 266;
  PARAM = 267;
  TYPECAST = 268;
  DOT_DOT = 269;
  COLON_EQUALS = 270;
  EQUALS_GREATER = 271;
  LESS_EQUALS = 272;
  GREATER_EQUALS = 273;
  NOT_EQUALS = 274;
  SQL_COMMENT = 275;
  C_COMMENT = 276;
  ABORT_P = 277;
  ABSOLUTE_P = 278;
  ACCESS = 279;
  ACTION = 280;
  ADD_P = 281;
  ADMIN = 282;
  AFTER = 283;
  AGGREGATE = 284;
  ALL = 285;
  ALSO = 286;
  ALTER = 287;
  ALWAYS = 288;
  ANALYSE = 289;
  ANALYZE = 290;
  AND = 291;
  ANY = 292;
  ARRAY = 293;
  AS = 294;
  ASC = 295;
  ASSERTION = 296;
  ASSIGNMENT = 297;
  ASYMMETRIC = 298;
  AT = 299;
  ATTACH = 300;
  ATTRIBUTE = 301;
  AUTHORIZATION = 302;
  BACKWARD = 303;
  BEFORE = 304;
  BEGIN_P = 305;
  BETWEEN = 306;
  BIGINT = 307;
  BINARY = 308;
  BIT = 309;
  BOOLEAN_P = 310;
  BOTH = 311;
  BY = 312;
  CACHE = 313;
  CALL = 314;
  CALLED = 315;
  CASCADE = 316;
  CASCADED = 317;
  CASE = 318;
  CAST = 319;
  CATALOG_P = 320;
  CHAIN = 321;
  CHAR_P = 322;
  CHARACTER = 323;
  CHARACTERISTICS = 324;
  CHECK = 325;
  CHECKPOINT = 326;
  CLASS = 327;
  CLOSE = 328;
  CLUSTER = 329;
  COALESCE = 330;
  COLLATE = 331;
  COLLATION = 332;
  COLUMN = 333;
  COLUMNS = 334;
  COMMENT = 335;
  COMMENTS = 336;
  COMMIT = 337;
  COMMITTED = 338;
  CONCURRENTLY = 339;
  CONFIGURATION = 340;
  CONFLICT = 341;
  CONNECTION = 342;
  CONSTRAINT = 343;
  CONSTRAINTS = 344;
  CONTENT_P = 345;
  CONTINUE_P = 346;
  CONVERSION_P = 347;
  COPY = 348;
  COST = 349;
  CREATE = 350;
  CROSS = 351;
  CSV = 352;
  CUBE = 353;
  CURRENT_P = 354;
  CURRENT_CATALOG = 355;
  CURRENT_DATE = 356;
  CURRENT_ROLE = 357;
  CURRENT_SCHEMA = 358;
  CURRENT_TIME = 359;
  CURRENT_TIMESTAMP = 360;
  CURRENT_USER = 361;
  CURSOR = 362;
  CYCLE = 363;
  DATA_P = 364;
  DATABASE = 365;
  DAY_P = 366;
  DEALLOCATE = 367;
  DEC = 368;
  DECIMAL_P = 369;
  DECLARE = 370;
  DEFAULT = 371;
  DEFAULTS = 372;
  DEFERRABLE = 373;
  DEFERRED = 374;
  DEFINER = 375;
  DELETE_P = 376;
  DELIMITER = 377;
  DELIMITERS = 378;
  DEPENDS = 379;
  DESC = 380;
  DETACH = 381;
  DICTIONARY = 382;
  DISABLE_P = 383;
  DISCARD = 384;
  DISTINCT = 385;
  DO = 386;
  DOCUMENT_P = 387;
  DOMAIN_P = 388;
  DOUBLE_P = 389;
  DROP = 390;
  EACH = 391;
  ELSE = 392;
  ENABLE_P = 393;
  ENCODING = 394;
  ENCRYPTED = 395;
  END_P = 396;
  ENUM_P = 397;
  ESCAPE = 398;
  EVENT = 399;
  EXCEPT = 400;
  EXCLUDE = 401;
  EXCLUDING = 402;
  EXCLUSIVE = 403;
  EXECUTE = 404;
  EXISTS = 405;
  EXPLAIN = 406;
  EXPRESSION = 407;
  EXTENSION = 408;
  EXTERNAL = 409;
  EXTRACT = 410;
  FALSE_P = 411;
  FAMILY = 412;
  FETCH = 413;
  FILTER = 414;
  FIRST_P = 415;
  FLOAT_P = 416;
  FOLLOWING = 417;
  FOR = 418;
  FORCE = 419;
  FOREIGN = 420;
  FORWARD = 421;
  FREEZE = 422;
  FROM = 423;
  FULL = 424;
  FUNCTION = 425;
  FUNCTIONS = 426;
  GENERATED = 427;
  GLOBAL = 428;
  GRANT = 429;
  GRANTED = 430;
  GREATEST = 431;
  GROUP_P = 432;
  GROUPING = 433;
  GROUPS = 434;
  HANDLER = 435;
  HAVING = 436;
  HEADER_P = 437;
  HOLD = 438;
  HOUR_P = 439;
  IDENTITY_P = 440;
  IF_P = 441;
  ILIKE = 442;
  IMMEDIATE = 443;
  IMMUTABLE = 444;
  IMPLICIT_P = 445;
  IMPORT_P = 446;
  IN_P = 447;
  INCLUDE = 448;
  INCLUDING = 449;
  INCREMENT = 450;
  INDEX = 451;
  INDEXES = 452;
  INHERIT = 453;
  INHERITS = 454;
  INITIALLY = 455;
  INLINE_P = 456;
  INNER_P = 457;
  INOUT = 458;
  INPUT_P = 459;
  INSENSITIVE = 460;
  INSERT = 461;
  INSTEAD = 462;
  INT_P = 463;
  INTEGER = 464;
  INTERSECT = 465;
  INTERVAL = 466;
  INTO = 467;
  INVOKER = 468;
  IS = 469;
  ISNULL = 470;
  ISOLATION = 471;
  JOIN = 472;
  KEY = 473;
  LABEL = 474;
  LANGUAGE = 475;
  LARGE_P = 476;
  LAST_P = 477;
  LATERAL_P = 478;
  LEADING = 479;
  LEAKPROOF = 480;
  LEAST = 481;
  LEFT = 482;
  LEVEL = 483;
  LIKE = 484;
  LIMIT = 485;
  LISTEN = 486;
  LOAD = 487;
  LOCAL = 488;
  LOCALTIME = 489;
  LOCALTIMESTAMP = 490;
  LOCATION = 491;
  LOCK_P = 492;
  LOCKED = 493;
  LOGGED = 494;
  MAPPING = 495;
  MATCH = 496;
  MATERIALIZED = 497;
  MAXVALUE = 498;
  METHOD = 499;
  MINUTE_P = 500;
  MINVALUE = 501;
  MODE = 502;
  MONTH_P = 503;
  MOVE = 504;
  NAME_P = 505;
  NAMES = 506;
  NATIONAL = 507;
  NATURAL = 508;
  NCHAR = 509;
  NEW = 510;
  NEXT = 511;
  NFC = 512;
  NFD = 513;
  NFKC = 514;
  NFKD = 515;
  NO = 516;
  NONE = 517;
  NORMALIZE = 518;
  NORMALIZED = 519;
  NOT = 520;
  NOTHING = 521;
  NOTIFY = 522;
  NOTNULL = 523;
  NOWAIT = 524;
  NULL_P = 525;
  NULLIF = 526;
  NULLS_P = 527;
  NUMERIC = 528;
  OBJECT_P = 529;
  OF = 530;
  OFF = 531;
  OFFSET = 532;
  OIDS = 533;
  OLD = 534;
  ON = 535;
  ONLY = 536;
  OPERATOR = 537;
  OPTION = 538;
  OPTIONS = 539;
  OR = 540;
  ORDER = 541;
  ORDINALITY = 542;
  OTHERS = 543;
  OUT_P = 544;
  OUTER_P = 545;
  OVER = 546;
  OVERLAPS = 547;
  OVERLAY = 548;
  OVERRIDING = 549;
  OWNED = 550;
  OWNER = 551;
  PARALLEL = 552;
  PARSER = 553;
  PARTIAL = 554;
  PARTITION = 555;
  PASSING = 556;
  PASSWORD = 557;
  PLACING = 558;
  PLANS = 559;
  POLICY = 560;
  POSITION = 561;
  PRECEDING = 562;
  PRECISION = 563;
  PRESERVE = 564;
  PREPARE = 565;
  PREPARED = 566;
  PRIMARY = 567;
  PRIOR = 568;
  PRIVILEGES = 569;
  PROCEDURAL = 570;
  PROCEDURE = 571;
  PROCEDURES = 572;
  PROGRAM = 573;
  PUBLICATION = 574;
  QUOTE = 575;
  RANGE = 576;
  READ = 577;
  REAL = 578;
  REASSIGN = 579;
  RECHECK = 580;
  RECURSIVE = 581;
  REF = 582;
  REFERENCES = 583;
  REFERENCING = 584;
  REFRESH = 585;
  REINDEX = 586;
  RELATIVE_P = 587;
  RELEASE = 588;
  RENAME = 589;
  REPEATABLE = 590;
  REPLACE = 591;
  REPLICA = 592;
  RESET = 593;
  RESTART = 594;
  RESTRICT = 595;
  RETURNING = 596;
  RETURNS = 597;
  REVOKE = 598;
  RIGHT = 599;
  ROLE = 600;
  ROLLBACK = 601;
  ROLLUP = 602;
  ROUTINE = 603;
  ROUTINES = 604;
  ROW = 605;
  ROWS = 606;
  RULE = 607;
  SAVEPOINT = 608;
  SCHEMA = 609;
  SCHEMAS = 610;
  SCROLL = 611;
  SEARCH = 612;
  SECOND_P = 613;
  SECURITY = 614;
  SELECT = 615;
  SEQUENCE = 616;
  SEQUENCES = 617;
  SERIALIZABLE = 618;
  SERVER = 619;
  SESSION = 620;
  SESSION_USER = 621;
  SET = 622;
  SETS = 623;
  SETOF = 624;
  SHARE = 625;
  SHOW = 626;
  SIMILAR = 627;
  SIMPLE = 628;
  SKIP = 629;
  SMALLINT = 630;
  SNAPSHOT = 631;
  SOME = 632;
  SQL_P = 633;
  STABLE = 634;
  STANDALONE_P = 635;
  START = 636;
  STATEMENT = 637;
  STATISTICS = 638;
  STDIN = 639;
  STDOUT = 640;
  STORAGE = 641;
  STORED = 642;
  STRICT_P = 643;
  STRIP_P = 644;
  SUBSCRIPTION = 645;
  SUBSTRING = 646;
  SUPPORT = 647;
  SYMMETRIC = 648;
  SYSID = 649;
  SYSTEM_P = 650;
  TABLE = 651;
  TABLES = 652;
  TABLESAMPLE = 653;
  TABLESPACE = 654;
  TEMP = 655;
  TEMPLATE = 656;
  TEMPORARY = 657;
  TEXT_P = 658;
  THEN = 659;
  TIES = 660;
  TIME = 661;
  TIMESTAMP = 662;
  TO = 663;
  TRAILING = 664;
  TRANSACTION = 665;
  TRANSFORM = 666;
  TREAT = 667;
  TRIGGER = 668;
  TRIM = 669;
  TRUE_P = 670;
  TRUNCATE = 671;
  TRUSTED = 672;
  TYPE_P = 673;
  TYPES_P = 674;
  UESCAPE = 675;
  UNBOUNDED = 676;
  UNCOMMITTED = 677;
  UNENCRYPTED = 678;
  UNION = 679;
  UNIQUE = 680;
  UNKNOWN = 681;
  UNLISTEN = 682;
  UNLOGGED = 683;
  UNTIL = 684;
  UPDATE = 685;
  USER = 686;
  USING = 687;
  VACUUM = 688;
  VALID = 689;
  VALIDATE = 690;
  VALIDATOR = 691;
  VALUE_P = 692;
  VALUES = 693;
  VARCHAR = 694;
  VARIADIC = 695;
  VARYING = 696;
  VERBOSE = 697;
  VERSION_P = 698;
  VIEW = 699;
  VIEWS = 700;
  VOLATILE = 701;
  WHEN = 702;
  WHERE = 703;
  WHITESPACE_P = 704;
  WINDOW = 705;
  WITH = 706;
  WITHIN = 707;
  WITHOUT = 708;
  WORK = 709;
  WRAPPER = 710;
  WRITE = 711;
  XML_P = 712;
  XMLATTRIBUTES = 713;
  XMLCONCAT = 714;
  XMLELEMENT = 715;
  XMLEXISTS = 716;
  XMLFOREST = 717;
  XMLNAMESPACES = 718;
  XMLPARSE = 719;
  XMLPI = 720;
  XMLROOT = 721;
  XMLSERIALIZE = 722;
  XMLTABLE = 723;
  YEAR_P = 724;
  YES_P = 725;
  ZONE = 726;
  NOT_LA = 727;
  NULLS_LA = 728;
  WITH_LA = 729;
  POSTFIXOP = 730;
  UMINUS = 731;
}
